-
Bug
-
Resolution: Done
-
P4: Low
-
5.10.1
-
None
-
Windows 7, MS VC 2015
-
f66c1db16c050c9d685a44a38ad7c5cf9f6fcc96 (qt/qtbase/dev)
Have link error:
mydialog.obj:-1: error: LNK2001: unresolved external symbol "struct QMetaObject const MyLibrary::staticMetaObject" (?staticMetaObject@MyLibrary@@3UQMetaObject@@B)
Error happen because of the following line in code (disappears when commented out):
mydialog.cpp:
QMetaEnum myEnum = QMetaEnum::fromType<MyLibrary::MyEnumClass>();
mylibrary.h:
namespace MyLibrary
{
Q_NAMESPACE
enum class MYLIBRARYSHARED_EXPORT MyEnumClass
{
...
};
Q_ENUM_NS(MyEnumClass)
...
} // namespace MyLibrary
Error reproducible building this project under Windows:
https://github.com/akontsevich/ConnectedCreatorPlugin
Found no solution in Internet, seems Qt bug.
- relates to
-
PYSIDE-862
Add support for Qt Remote Objects
-
- Open
-